JumpScript/tests/baselines/reference/staticAsIdentifier.errors.txt
tests/cases/compiler/staticAsIdentifier.jump(2,5): error TS1071: 'static' modifier cannot appear on an index signature.


==== tests/cases/compiler/staticAsIdentifier.jump (1 errors) ====
    class C {
        static static
        ~~~~~~
!!! error TS1071: 'static' modifier cannot appear on an index signature.
        [x: string]: string;
    }